# TelosPDF

./: .gitignore  ACKNOWLEDGEMENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
corpus/: manifest.txt
crates/telos-cli/: Cargo.toml
crates/telos-cli/src/: main.rs
crates/telos-core/: Cargo.toml
crates/telos-core/src/: lib.rs
crates/telos-doc/: Cargo.toml
crates/telos-doc/src/: lib.rs
crates/telos-doc/tests/: merge.rs  protect.rs
crates/telos-jobs/: Cargo.toml
crates/telos-jobs/src/: lib.rs
crates/telos-render/: Cargo.toml
crates/telos-render/src/: lib.rs
crates/telos-render/tests/: compress.rs  edit.rs  organize.rs  redact.rs  smoke.rs
languages/: README.md  _template.src.json  af.src.json  am.src.json  ar.src.json  as.src.json  ay.src.json  az.src.json  bg.src.json  bn.src.json  brx.src.json  build-locales.mjs  ca.src.json  cs.src.json  cy.src.json  da.src.json  de.src.json  doi.src.json  el.src.json  en-AU.src.json  en-US.json  en-US.src.json  es-419.src.json  es-MX.src.json  es.src.json  et.src.json  fa.src.json  fi.src.json  fil.src.json  fj.src.json  fr-CA.src.json  fr.src.json  ga.src.json  gd.json  gd.src.json  gn.src.json  gu.src.json  ha.src.json  haw.src.json  he.src.json  (+72 more)
scripts/: bundle-ocr.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
xtask/: Cargo.toml
xtask/src/: corpus.rs  main.rs
