[package]
name = "telospdf"
description = "TelosPDF — open-source PDF workstation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "telospdf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
telos-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
base64 = "0.22"
docx-rs = "0.4"
similar = "2"
