[package]
name = "xtask"
description = "TelosPDF repo tasks: fetch-pdfium, corpus runner, checks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
pdf-writer.workspace = true
telos-render.workspace = true
