[package]
name = "telos-cli"
description = "Headless TelosPDF: the same command registry, no UI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "telos"
path = "src/main.rs"

[dependencies]
telos-core.workspace = true
anyhow.workspace = true
