[package]
name = "telos-core"
description = "TelosPDF core engine façade — the embeddable, UI-agnostic API surface"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
telos-doc.workspace = true
telos-render.workspace = true
telos-jobs.workspace = true
