[package]
name = "telos-doc"
description = "TelosPDF document model: lopdf wrapper, revisions, incremental updates"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
lopdf.workspace = true
pdf-writer.workspace = true
image.workspace = true
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sha2 = "0.10"

[dev-dependencies]
telos-render.workspace = true
